--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ermolaev/mind-common",
-  "version": "1.0.0-beta.3",
+  "version": "1.0.0-beta.4",
   "description": "React hooks library",
   "main": "lib/index.js",
   "module": "lib/index.esm.js",
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "@types/react": "^17.0.38",
     "rollup": "^2.66.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
